--- a/src/partials/layout.njk
+++ b/src/partials/layout.njk
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
     <meta name="description" content={{ description }}>
+    <link rel="stylesheet" href="/styles.css">
   </head>
  <body>
   {% block header %}
