--- a/src/partials/layout.njk
+++ b/src/partials/layout.njk
@@ -7,21 +7,22 @@
     <meta name="description" content={{ description }}>
     <link rel="stylesheet" href="/styles.css">
   </head>
- <body>
-  {% block header %}
-    <header>
-      <p>This is the header.</p>
-    </header>
-  {% endblock %}
-  <main>
-    {% block content %}
-      {{ content | safe }}
+  <body>
+    {% block header %}
+      <header>
+        <p>This is the header.</p>
+      </header>
     {% endblock %}
-  </main>
-  {% block footer %}
-    <footer>
-      <p>This is the footer.</p>
-    </footer>
-  {% endblock %}
-</body>
+    <main>
+      {% block content %}
+        {{ content | safe }}
+      {% endblock %}
+    </main>
+    {% block footer %}
+      <footer>
+        <p>This is the footer.</p>
+      </footer>
+    {% endblock %}
+    <script src="/index.js" type="module"></script>
+  </body>
 </html>
